<resources>
    <string name="app_name">Nu Pay</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="action_settings">Settings</string>
    <string name="signed_in_fmt">Signed In As:</string>
    <string name="api_sign_in">1003648665919-1dcuht955rmlsg1cnccpfboi2kes37ot.apps.googleusercontent.com</string>
    <string name="next"><![CDATA[Next>]]></string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="spinner_title">Nominal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_add_saldo">Tambah Saldo</string>
    <string name="title_activity_trf_confirm">Transfer Confirm</string>
    <string name="title_activity_pulsa">PulsaActivity</string>
    <string name="title_activity_tagihan">TagihanActivity</string>
    <string name="title_activity_bayar_tagihan">Inbox</string>
    <string name="title_activity_cek_tagihan">CekTagihan</string>
    <string name="title_activity_token">TokenActivity</string>
    <string name="title_activity_quick_pay">QuickPayActivity</string>
    <string name="title_activity_voucher">VoucherActivity</string>
    <string name="title_activity_paket_data">PaketDataActivity</string>
    <string name="title_activity_transact">TransactActivity</string>
    <string name="drawer_item_compact_header">Mini Drawer Header</string>
    <string name="drawer_item_action_bar_drawer">Pulsa</string>
    <string name="drawer_item_multi_drawer">Tagihan</string>
    <string name="drawer_item_non_translucent_status_drawer">Token</string>
    <string name="drawer_item_voucher">Voucher Game</string>
    <string name="drawer_item_paket">Paket Data</string>
    <string name="drawer_item_advanced_drawer">Advance</string>
    <string name="drawer_item_section_header">Section Drawer</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="title_activity_dompet">Dompetku</string>
    <string name="text_keterangan">Catatan :\n- Bila sebelumnya anda telah menggunakan Nusa Pay / Pay Point maka data-data anda masih tersimpan aman dan akan di tampilkan di device ini\n\n- Bila anda pengguna baru Nusa Pay maka ini adalah satu langkah awal Keamanan dan Kenyamanan anda dalam melakukan transakai dan menikmati fitur-fitur yang kami berikan</string>
    <string name="text_keterangan_2">Nomor anda akan kami gunakan untuk mengirim pemberitahuan tentang:\n- Transaksi pulsa yang gagal,\n- Provider yang mengalami gangguan\n- Promo dan pemberitahuan yang lain</string>
    <string name="desc_tr_first">di halaman ini menu-menu transaksi di wakili oleh icon - icon. Keterangan untuk masing-masing icon bisa anda lihat dengan klik menu tersebut</string>
    <string name="title_activity_about">About Us</string>
    <string name="about_store">Jl. Kedung Asem gang 2, No. 10, Rungkut\nSurabaya, Jawa Timur</string>
    <string name="about_phone">089678382795</string>
    <string name="about_mail">achmad.aris30@gmail.com</string>
    <string name="text_add_saldo">Penambahan saldo lewat Transfer akan di proses dari pukul 04.00 sampai dengan pukul 22.00 wib, jika transfer yang melewati pukul 22.00 wib, akan diproses keesokan harinya.\n\nPenambahan saldo minimal Rp. 20.000\n\nSetelah anda melakukan Transfer ke salah satu nomor rekening yang tertera di bawah, silahkan melakukan KONFIRMASI dengan klik tombol \"Confirm\" </string>
    <string name="tket1">Terakhir Dompet Di isi</string>
    <string name="tket2">Isi Dompet Saat ini</string>
    <string name="dialog_title_connection_trouble">Gagal komunikasi dengan server, Pastikan koneksi internet anda stabil kemudian silahkan ulangi transaksi anda</string>
    <string name="dialog_title_saldo">Saldo tidak mencukupi</string>
    <string name="dialog_title_telkomsel_data">Untuk sementara paket data Telkomsel Tidak Tersedia</string>
    <string name="dialog_title_connection_trouble1">Data tidak bisa ditampilkan.\nPastikan Koneksi Internet Stabil</string>

    <string name="title_activity_banned">BannedActivity</string>
    <string name="dummy_button">Ok</string>
    <string name="dummy_content">Akun anda terdeteksi kegiatan yang tidak wajar\ndan melanggar syarat dan ketentuan yang berlaku\nsehingga akun anda dibekukan</string>
</resources>
