<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.samimi.nusapay.feature.AboutActivity"
    tools:showIn="@layout/activity_about">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="45sp"
        android:text="Pay Point"
        android:textColor="@color/blueA"
        android:id="@+id/ab1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/blueA"
        android:text="by D-Tech Apps"
        android:layout_below="@+id/ab1"
        android:id="@+id/ab2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/icons"
        android:id="@+id/ab3"
        android:textSize="15sp"
        android:textColor="@color/blueA"
        android:text="Anda bisa menghubungi kami di:"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icons"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.mikepenz.iconics.view.IconicsImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                app:iiv_color="@android:color/holo_red_dark"
                app:iiv_icon="gmi-google" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:text="@string/about_mail"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="@color/accent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="5dp"
                    app:iiv_color="@color/color_emerald"
                    app:iiv_icon="gmi-whatsapp"
                    android:id="@+id/mes1"/>
                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_toRightOf="@+id/mes1"
                    app:iiv_icon="gmi-email" />
            </RelativeLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:layout_centerHorizontal="true"
                android:text="@string/about_phone"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="@color/accent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:iiv_color="@color/Blue"
                    app:iiv_icon="gmi-store" />
            </RelativeLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:text="@string/about_store"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="@color/accent"/>
    </LinearLayout>

</RelativeLayout>
