<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.samimi.nusapay.WelcomeActivity"
    android:background="@drawable/bgfl">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ui1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:text="Selamat Datang di"
            android:layout_centerHorizontal="true"
            android:id="@+id/text1"
            android:textColor="@android:color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="Pay Point"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:id="@+id/text2"
            android:layout_below="@+id/text1"/>

        <View
            android:layout_width="400dp"
            android:layout_height="2dp"
            android:background="@color/tosca"
            android:layout_below="@+id/text2"
            android:layout_marginTop="10dp"
            android:id="@+id/garis"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ledit"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/garis"
            android:layout_marginTop="50dp">
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/uname"
                android:hint="Username"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/umail"
                android:hint="Email"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/ufbase"

                android:hint="Password"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:id="@+id/bsign"
                android:text="Sign in"/>

        </LinearLayout>
        <!--<com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="Silahkan login menggunakan akun Google anda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/sign_in_button"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:layout_marginBottom="27dp"
            android:id="@+id/textView" />-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ledit"
            android:textColor="@android:color/white"
            android:text="@string/text_keterangan"
            android:id="@+id/text3"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textSize="18sp"
            android:background="@null"
            android:text="@string/next"
            android:enabled="false"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ui2"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_next2"
            android:textSize="18sp"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/next"
            android:textColor="@android:color/darker_gray" />

        <!--<TextView
            android:text="Default Nomor Handphone Anda "

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/textView2"
            android:layout_below="@+id/cbx"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="98dp" />-->


        <CheckBox
            android:text="Dengan ini saya menyetujui Syarat dan Ketentuan dari Pay Point"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="16dp"
            android:id="@+id/cbx"
            android:layout_above="@+id/btn_next2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="Default nomor Handphone"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/textViewNo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="97dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="phone"

            android:ems="10"
            android:layout_below="@+id/textViewNo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:id="@+id/usrnumber" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usrnumber"
            android:id="@+id/tketerangan2"
            android:layout_marginTop="30dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:text="@string/text_keterangan_2"/>
    </RelativeLayout>

    <!--2nd ui-->


</RelativeLayout>
